[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GUI/MessagePopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/gui.gd" type="Script" id=4]

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="MessagePopup" parent="." instance=ExtResource( 1 )]

[connection signal="about_to_show" from="MessagePopup" to="." method="_on_MessagePopup_about_to_show"]
[connection signal="popup_hide" from="MessagePopup" to="." method="_on_MessagePopup_popup_hide"]
